k8s_manifests/auth-app-metadata_deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: auth-app-metadata
  name: auth-app-metadata
  namespace: auth-demo-metadata
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-app-metadata
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: auth-app-metadata
    spec:
      containers:
      - image: gcr.io/reechar-hedge-gke-auth/security-demo-app:latest
        imagePullPolicy: Always
        name: security-demo-app
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
