k8s_manifests/auth-app-secret_deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: auth-app-kube-secret
  name: auth-app-kube-secret
  namespace: auth-demo-kube-secret
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-app-kube-secret
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: auth-app-kube-secret
    spec:
      containers:
      - env:
        - name: GOOGLE_APPLICATION_CREDENTIALS
          value: /var/secrets/google/key.json
        image: gcr.io/reechar-hedge-gke-auth/security-demo-app:latest
        imagePullPolicy: Always
        name: security-demo-app
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/secrets/google
          name: google-cloud-key
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: google-cloud-key
        secret:
          defaultMode: 420
          secretName: sa-key
