k8s_manifests/auth-app-vault-dynamic_deployment.yaml
/*
 * Copyright 2018 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *       http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: auth-app-vault-dynamic
  name: auth-app-vault-dynamic
  namespace: auth-demo-vault-dynamic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-app-vault-dynamic
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: auth-app-vault-dynamic
    spec:
      containers:
      - env:
        - name: GOOGLE_APPLICATION_CREDENTIALS
          value: /var/secrets/google/key.json
        image: gcr.io/reechar-hedge-gke-auth/security-demo-app:latest
        imagePullPolicy: Always
        name: security-demo-app
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/run/secrets/vaultproject.io
          name: vault-auth
        - mountPath: /var/secrets/google
          name: google-cloud-key
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: vault-auth-dynamic
      serviceAccountName: vault-auth-dynamic
      terminationGracePeriodSeconds: 30
      volumes:
      - emptyDir:
          medium: Memory
        name: vault-auth
      - emptyDir:
          medium: Memory
        name: vault-secrets
      - emptyDir:
          medium: Memory
        name: google-cloud-key
