k8s_manifests/auth-app-vault-static_deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: auth-app-vault-static
  name: auth-app-vault-static
  namespace: auth-demo-vault-static
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-app-vault-static
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: auth-app-vault-static
    spec:
      containers:
      - env:
        - name: GOOGLE_APPLICATION_CREDENTIALS
          value: /var/secrets/google/key.json
        image: gcr.io/reechar-hedge-gke-auth/security-demo-app:latest
        imagePullPolicy: Always
        name: security-demo-app
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/run/secrets/vaultproject.io
          name: vault-auth
        - mountPath: /var/secrets/google
          name: google-cloud-key
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: vault-auth-static
      serviceAccountName: vault-auth-static
      terminationGracePeriodSeconds: 30
      volumes:
      - emptyDir:
          medium: Memory
        name: vault-auth
      - emptyDir:
          medium: Memory
        name: vault-secrets
      - emptyDir:
          medium: Memory
        name: google-cloud-key
