k8s_manifests/auth-app-workload-identity_deployment.yaml
/*
 * Copyright 2018 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *       http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: auth-app-workload-identity
  name: auth-app-workload-identity
  namespace: auth-demo-workload-identity
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-app-workload-identity
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: auth-app-workload-identity
    spec:
      containers:
      - image: gcr.io/reechar-hedge-gke-auth/security-demo-app:latest
        imagePullPolicy: Always
        name: security-demo-app
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
