k8s_manifests/auth-app-vault-dynamic_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: auth-demo-vault-dynamic-ingress
  namespace: auth-demo-vault-dynamic
spec:
  rules:
  - host: auth-demo.hedge.reechar.co
    http:
      paths:
      - backend:
          serviceName: auth-app-vault-dynamic-service
          servicePort: 8080
        path: /vault-dynamic
  tls:
  - hosts:
    - auth-demo.hedge.reechar.co
    secretName: production-crt
