k8s_manifests/auth-app-vault-static_ingress.yaml
/*
 * Copyright 2018 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *       http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: auth-demo-vault-static-ingress
  namespace: auth-demo-vault-static
spec:
  rules:
  - host: auth-demo.hedge.reechar.co
    http:
      paths:
      - backend:
          serviceName: auth-app-vault-static-service
          servicePort: 8080
        path: /vault-static
  tls:
  - hosts:
    - auth-demo.hedge.reechar.co
    secretName: production-crt
