k8s_manifests/auth-app-workload-identity_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: auth-demo-workload-identity-ingress
  namespace: auth-demo-workload-identity
spec:
  rules:
  - host: auth-demo.hedge.reechar.co
    http:
      paths:
      - backend:
          serviceName: auth-app-workload-identity-service
          servicePort: 8080
        path: /workload-identity
  tls:
  - hosts:
    - auth-demo.hedge.reechar.co
    secretName: production-crt
